--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASD</title>
+    <title>WWD Holy Grail Layout - Practice</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Nunca seras inmortal</h1>
+    
+    <header>
+        <h1 contenteditable>Header</h1>
+    </header>
+        <div class="left-sidebar" contenteditable>Left Sidebar</div>
+    <main contenteditable></main>
+     <div class="right-sidebar" contenteditable>Right Sidebar</div>
+
+    <footer contenteditable>Footer Content</footer>
 </body>
 </html>
