sections and links added

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -31,6 +31,25 @@
     </header>
 
     <main>
+        <section class="card 1">
+            <h2>About Me</h2>
+            <p>My name is Mahonrri but my friends and coworkers call me Maho, I was born in Cochabamba Bolivia.
+                I served in Sonora Mexico as a missionary of the church of Jesus Christ of latter-day Saints, from 2018 to 2020,
+                after completing my 2-year service I got married to a wonderful woman, her name is Valeria. 
+                I'm currently working remotely for USA companies as a client services agent.
+                I love movie nights with my wife and early workouts.
+            </p>
+        </section>
+
+        <section class="card 2">
+            <h2>Web Dev Resources</h2>
+            <p>List of my favorites development resources</p>
+            <ul>
+                <li><a href="https://www.udemy.com/courses/development/web-development/?utm_source=adwords&utm_medium=udemyads&utm_campaign=Branded-Topic_la.ES_cc.LATAM&utm_content=deal4584&utm_term=_._ag_122876209603_._ad_604231076843_._kw_precios%20udemy_._de_c_._dm__._pl__._ti_kwd-838067775969_._li_20083_._pd__._&matchtype=b&gad_source=1&gclid=CjwKCAjwxLKxBhA7EiwAXO0R0FRxpOcxHJtlAvyznTs0omng3ziYF4_Q4oaEbiSIa-ikm7mKcSg96xoC24MQAvD_BwE">Udemy</a></li>
+                <li><a href="https://www.w3schools.com/js/">W3 Schools</a></li>
+                <li><a href="https://css-tricks.com/">CSS tricks</a></li>
+            </ul>
+        </section>
 
 
     </main>
