Html almost done

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -50,13 +50,12 @@
                 <li><a href="https://css-tricks.com/">CSS tricks</a></li>
             </ul>
         </section>
-
-
-    </main>
+ </main>
 
     <footer>
-
-
+        &copy; <span id="currentyear"></span>
+        <p>Mahonrri Mendez | Cochabamba, Bolivia</p>
+        <span id="lastModified"></span>
     </footer>
 </body>
 </html>
