--- a/index.html/index.html
+++ b/index.html/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <h1>WDD 131: Dynamic Web Fundamentals - Mahonrri Mendez</h1>
+        <div><img src="images/retrato.jpg" alt="retrato" width="100px"></div>
         <nav class="navigation"><ul>
             <li>
                 
@@ -50,7 +51,7 @@
         <section class="card2">
             <h2>Web Dev Resources</h2>
             <p>List of my favorites development resources</p>
-            <ul>
+            <ul class="navigation2">
                 <li><a href="https://www.udemy.com/courses/development/web-development/?utm_source=adwords&utm_medium=udemyads&utm_campaign=Branded-Topic_la.ES_cc.LATAM&utm_content=deal4584&utm_term=_._ag_122876209603_._ad_604231076843_._kw_precios%20udemy_._de_c_._dm__._pl__._ti_kwd-838067775969_._li_20083_._pd__._&matchtype=b&gad_source=1&gclid=CjwKCAjwxLKxBhA7EiwAXO0R0FRxpOcxHJtlAvyznTs0omng3ziYF4_Q4oaEbiSIa-ikm7mKcSg96xoC24MQAvD_BwE">Udemy</a></li>
                 <li><a href="https://www.w3schools.com/js/">W3 Schools</a></li>
                 <li><a href="https://css-tricks.com/">CSS tricks</a></li>
@@ -58,8 +59,8 @@
         </section>
  </main>
 
-    <footer>
-        &copy; <span id="currentyear"></span>
+    <footer onload="dateTime()">
+        <p id="dateTime"></p>
         <p>Mahonrri Mendez | Cochabamba, Bolivia</p>
         <span id="lastModified"></span>
         
