--- a/place.html
+++ b/place.html
@@ -8,7 +8,7 @@
     <!-- meta author and description-->
     <meta name="author" content="Mahonrri Mendez" />
     <meta name="description"
-    content="This page will display my place of birth and some details about it" />
+    content="This page will display my place of birth 'Bolivia' and some details about it" />
     
     <!--  links for CSS and js  -->
     <link rel="stylesheet" href="styles/place.css">
