--- a/place.html
+++ b/place.html
@@ -21,12 +21,13 @@
         
     </header>
     <main>
-        <div class="hero">
-            <picture>
-                <source srcset="images/hero-large.webp" media="(min-width: 960px)">
-                <source srcset="images/hero-medium.webp" media="(min-width: 650px)">
-                <img src="images/hero-small.webp" alt="Bolivia" width="650" height="350">
-            </picture>
+        <div class="responsive">
+        <picture>
+            <source srcset="images/bolivia.webp" media="(min-width: 960px)">
+            <source srcset="images/bolivia-mediano.webp" media="(min-width: 650px)">
+            <img src="images/vertical.webp" alt="salar de uyuni">
+        </picture>
+
         </div>
         <section class="lista1">
             <h2 id="title">Data</h2>
@@ -90,7 +91,7 @@
                         </tbody>
                 </table>
             </section>
-        
+        </div>
     </main>
     <footer>
         <p>
