--- a/place.html
+++ b/place.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Place W03</title>
 
     <!-- meta author and description-->
     <meta name="author" content="Mahonrri Mendez" />
