--- a/aboutus.html
+++ b/aboutus.html
@@ -12,11 +12,11 @@
         <h1>Best Ice-cream</h1>
         <button id="menu"></button>
             <nav class="navigation">
-                <a href="final.html" title="Home">Home</a>
-                <a href="aboutus.html" title="About Us">About Us</a>
-                <a href="menu.html" title="Menu">Menu</a>
-                <a href="delivery.html" title="Delivery Service">Delivery Service</a>            </nav>
-    </header>
+                <a href="final.html" title="Home">Inicio</a>
+                <a href="aboutus.html" title="About Us">Informacion</a>
+                <a href="menu.html" title="Menu">Menú</a>
+                <a href="delivery.html" title="Delivery">Delivery</a>
+        </header>
     <H1>About us Description</H1>
     <h2>Vision</h2>
     <h2>Mision</h2>
