--- a/final.html
+++ b/final.html
@@ -19,10 +19,10 @@
         <h1>Best Ice-cream</h1>
         <button id="menu"></button>
             <nav class="navigation">
-                <a href="final.html" title="Home">Home</a>
-                <a href="aboutus.html" title="About Us">About Us</a>
-                <a href="menu.html" title="Menu">Menu</a>
-                <a href="delivery.html" title="Delivery Service">Delivery Service</a>
+                <a href="final.html" title="Home">Inicio</a>
+                <a href="aboutus.html" title="About Us">Informacion</a>
+                <a href="menu.html" title="Menu">Menú</a>
+                <a href="delivery.html" title="Delivery">Delivery</a>
             </nav>
     </header>
 
@@ -31,22 +31,22 @@
         <div class="pictures">
             
                 <figure>
-                    <img src="images/brownie.jpg" alt="sanDiegoTemple" width="300px">
+                    <img src="images/brownie.jpg" alt="brownie" width="300px">
                     <p>Brownie</p>
                 </figure>
 
                 <figure>
-                    <img src="images/Acai.jpg" alt="sanDiegoTemple" width="300px">
+                    <img src="images/Acai.jpg" alt="acai" width="300px">
                     <p>Acai</p>
                 </figure>
 
                 <figure>
-                    <img src="images/empanada.jpg" alt="sanDiegoTemple" width="300px">
+                    <img src="images/empanada.jpg" alt="empanada" width="300px">
                     <p>Empanadas</p>
                 </figure>
 
                 <figure>
-                    <img src="images/agua.webp" alt="sanDiegoTemple" width="300px">
+                    <img src="images/agua.webp" alt="agua" width="300px">
                     <p>Fresh Water</p>
                 </figure>
             </div>
