--- a/menu.html
+++ b/menu.html
@@ -12,10 +12,10 @@
         <h1>Best Ice-cream</h1>
         <button id="menu"></button>
             <nav class="navigation">
-                <a href="final.html" title="Home">Home</a>
-                <a href="aboutus.html" title="About Us">About Us</a>
-                <a href="menu.html" title="Menu">Menu</a>
-                <a href="delivery.html" title="Delivery Service">Delivery Service</a>            </nav>
+                <a href="final.html" title="Home">Inicio</a>
+                <a href="aboutus.html" title="About Us">Informacion</a>
+                <a href="menu.html" title="Menu">Menú</a>
+                <a href="delivery.html" title="Delivery">Delivery</a>
     </header>
     
     <h1>Here is the Menu</h1>
