--- a/menu.html
+++ b/menu.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/final.css">
     <link rel="stylesheet" href="styles/final-large.css">
+    
 </head>
 <body>
     <header>
@@ -17,8 +19,49 @@
                 <a href="menu.html" title="Menu">Menú</a>
                 <a href="delivery.html" title="Delivery">Delivery</a>
     </header>
+    <main>
+        <h2>Revisa nuestro menú</h2>
+        <section>
+            <div class="menu">
+                <figure>
+                    <img src="images/helado1.jpg" alt="Helado 1" width="300px">
+                    <h3>Helado de Vainilla</h3>
+                    <p>Delicioso helado de vainilla.</p>
+                </figure>
+                <figure>
+                    <img src="images/helado2.jpg" alt="Helado 2">
+                    <h3>Helado de Fresa</h3>
+                    <p>Refrescante helado de fresa.</p>
+                </figure>
+                <figure>
+                    <img src="images/helado3.jpg" alt="Helado 3">
+                    <h3>Helado de Chocolate</h3>
+                    <p>Sabroso helado de chocolate.</p>
+                </figure>
+                <figure>
+                    <img src="images/Acai1.jpg" alt="Helado 4">
+                    <h3>Helado de Acai</h3>
+                    <p>Irresistible helado de Acai c/s azucar.</p>
+                </figure>
+                <figure>
+                    <img src="images/brownie1.jpeg" alt="Brownie">
+                    <h3>Brownie de Chocolate</h3>
+                    <p>Irresistible brownie relleno de chocolate c/s azucar.</p>
+                </figure>
+                <figure>
+                    <img src="images/empanada1.jpg" alt="empanada">
+                    <h3>Empanada de Queso</h3>
+                    <p>Deliciosa empanada de queso recien horneada.</p>
+                </figure>
+                <figure>
+                    <img src="images/agua1.jpg" alt="agua">
+                    <h3>Agua fresca</h3>
+                    <p>Todas las marcas disponibles</p>
+                </figure>
+            </div>
+        </section>
+    </main>
     
-    <h1>Here is the Menu</h1>
     <footer>
         <p>
             <span id="currentyear"></span>
