--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <h2>Revisa nuestro menú</h2>
-        <section>
+        <main>
             <div class="menu">
                 <figure>
                     <img src="images/helado1.jpg" alt="Helado 1" width="300px">
@@ -29,37 +29,37 @@
                     <p>Delicioso helado de vainilla.</p>
                 </figure>
                 <figure>
-                    <img src="images/helado2.jpg" alt="Helado 2">
+                    <img src="images/helado2.jpg" alt="Helado 2" width="300px">
                     <h3>Helado de Fresa</h3>
                     <p>Refrescante helado de fresa.</p>
                 </figure>
                 <figure>
-                    <img src="images/helado3.jpg" alt="Helado 3">
+                    <img src="images/helado3.jpg" alt="Helado 3" width="300px">
                     <h3>Helado de Chocolate</h3>
                     <p>Sabroso helado de chocolate.</p>
                 </figure>
                 <figure>
-                    <img src="images/Acai1.jpg" alt="Helado 4">
+                    <img src="images/Acai1.jpg" alt="Helado 4" width="300px">
                     <h3>Helado de Acai</h3>
                     <p>Irresistible helado de Acai c/s azucar.</p>
                 </figure>
                 <figure>
-                    <img src="images/brownie1.jpeg" alt="Brownie">
+                    <img src="images/brownie1.jpeg" alt="Brownie" width="300px">
                     <h3>Brownie de Chocolate</h3>
                     <p>Irresistible brownie relleno de chocolate c/s azucar.</p>
                 </figure>
                 <figure>
-                    <img src="images/empanada1.jpg" alt="empanada">
+                    <img src="images/empanada1.jpg" alt="empanada" width="300px">
                     <h3>Empanada de Queso</h3>
                     <p>Deliciosa empanada de queso recien horneada.</p>
                 </figure>
                 <figure>
-                    <img src="images/agua1.jpg" alt="agua">
+                    <img src="images/agua1.jpg" alt="agua" width="300px">
                     <h3>Agua fresca</h3>
                     <p>Todas las marcas disponibles</p>
                 </figure>
             </div>
-        </section>
+        </main>
     </main>
     
     <footer>
