--- a/aboutus.html
+++ b/aboutus.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Mahonrri Mendez" />
+    <meta name="description"
+    content="This page will work as an informative page the clients to know more about the company" />
+    
     <title>About us</title>
     <link rel="stylesheet" href="styles/final.css">
     <link rel="stylesheet" href="styles/final-large.css">
