--- a/aboutus.html
+++ b/aboutus.html
@@ -27,11 +27,11 @@
         <h2>Conoce un poco sobre nuestra Familia</h2>
         </div>
         <section id="vision">
-            <h3>Mision</h3>
+            <h3>Misión</h3>
             <p>Nuestra misión es crear momentos de alegría y conexión familiar a través de la experiencia única que ofrecen nuestros deliciosos helados. Nos comprometemos a elaborar productos de la más alta calidad, utilizando ingredientes frescos y naturales, para deleitar a nuestros clientes en cada visita.</p>
         </section>
         <section id="mision">
-            <h3>Vision</h3>
+            <h3>Visión</h3>
             <p>Nos visualizamos como el destino preferido de familias y amigos que buscan disfrutar de momentos especiales juntos, rodeados de un ambiente acogedor y amigable. Buscamos ser reconocidos no solo por la excelencia de nuestros helados, sino también por el calor humano y la hospitalidad que ofrecemos en cada uno de nuestros establecimientos.</p>
         </section>
         <section id="valores">
